--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.1",
+    "swr": "^2.2.4",
     "tailwindcss": "^3.2.7",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "^3.22.4",
+    "zod-fetch": "^0.1.1"
   }
 }
