--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "swr": "^2.2.4",
     "tailwindcss": "^3.2.7",
     "typescript": "5.0.2",
-    "zod": "^3.22.4",
-    "zod-fetch": "^0.1.1"
+    "zod": "^3.22.4"
   }
 }
